# trial-3-h4ujt7

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: analytics-service.yml  auth-service.yml  integration-service.yml  load-test.yml  nlp-service.yml  performance-test.yml  security-scan.yml  task-service.yml  web-app.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/: README.md
infrastructure/helm/values/: analytics.yaml  auth.yaml  integration.yaml  monitoring.yaml  nlp.yaml  storage.yaml  tasks.yaml  web.yaml
infrastructure/kubernetes/analytics/: deployment.yaml  hpa.yaml  service.yaml
infrastructure/scripts/: backup-databases.sh  deploy-services.sh  init-cluster.sh  rotate-certificates.sh  setup-monitoring.sh  update-secrets.sh
src/backend/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.md  docker-compose.yml  jest.config.ts  nodemon.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
src/backend/api/gateway/: kong.yml  routes.ts
src/backend/api/openapi/: security.yaml  swagger.yaml
src/backend/api/openapi/schemas/: analytics.yaml  auth.yaml  common.yaml  projects.yaml  tasks.yaml  users.yaml
src/backend/config/: database.ts  elasticsearch.ts  kafka.ts  logging.ts  redis.ts  security.ts
src/backend/db/migrations/: 00001_initial_schema.sql  00002_task_tables.sql  00003_analytics_tables.sql
src/backend/db/seeds/: development.sql  test.sql
src/backend/nlp/: __init__.py
src/backend/nlp/api/: endpoints.py  routes.py
src/backend/nlp/core/: entity_extraction.py  intent_classification.py  task_extraction.py  text_processing.py
src/backend/nlp/models/: bert_classifier.py  embeddings.py  ner_model.py
src/backend/nlp/services/: communication_processor.py  model_trainer.py
src/backend/nlp/utils/: preprocessing.py  validation.py
src/backend/services/analytics/: __init__.py
src/backend/services/analytics/api/: routes.py
src/backend/services/analytics/core/: aggregations.py  metrics.py  predictions.py
src/backend/services/analytics/models/: performance.py  resource.py
src/backend/services/analytics/services/: dashboard.py  reporting.py
src/backend/services/auth/src/: config.ts
src/backend/services/auth/src/controllers/: auth.controller.ts
src/backend/services/auth/src/middleware/: jwt.middleware.ts
src/backend/services/auth/src/models/: user.model.ts
src/backend/services/auth/src/routes/: auth.routes.ts
src/backend/services/auth/src/services/: auth.service.ts
src/backend/services/auth/src/utils/: crypto.ts
src/backend/services/integration/cmd/server/: main.go
src/backend/services/integration/internal/adapters/: email.go  jira.go  slack.go
src/backend/services/integration/internal/api/: handlers.go  routes.go
src/backend/services/integration/internal/config/: config.go
src/backend/services/integration/internal/models/: integration.go
src/backend/services/integration/internal/services/: sync.go
src/backend/services/tasks/src/: config.ts
src/backend/services/tasks/src/controllers/: project.controller.ts  task.controller.ts
src/backend/services/tasks/src/models/: project.model.ts  task.model.ts
src/backend/services/tasks/src/routes/: project.routes.ts  task.routes.ts
src/backend/services/tasks/src/services/: notification.service.ts  project.service.ts  task.service.ts
src/backend/shared/constants/: error-codes.ts  status-codes.ts
src/backend/shared/interfaces/: analytics.interface.ts  auth.interface.ts  common.interface.ts  project.interface.ts  task.interface.ts
src/backend/shared/middleware/: error.middleware.ts  logging.middleware.ts  validation.middleware.ts
src/backend/shared/utils/: date.utils.ts  logger.ts  validation.ts
src/test/: .env.test  Dockerfile.test  README.md  docker-compose.test.yml  jest.config.ts  package.json  tsconfig.json
src/web/: .dockerignore  .env.development  .env.production  .eslintrc.json  .prettierrc  Dockerfile  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
(+301 files in other folders)
